--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "chalk": "^0.5.1",
+    "cli": "^0.6.6",
     "minimist": "^1.1.0",
     "revalidator": "^0.3.1",
     "ssh2": "^0.4.6"
